# libreoffice_parse

./: CMakeLists.txt  README.md  description  main.cpp  qtuno.conf  qtuno.conf.astra.example  qtuno.pro  unoFileObject.cpp  unoFileObject.h  unoFileWidget.cpp  unoFileWidget.h  unoMainWindow.cpp  unoMainWindow.h  unoSearchDelegate.cpp  unoSearchDelegate.h  unoSearchForm.cpp  unoSearchForm.h  unoSearchTablesModel.h  unoSingleton.cpp  unoSingleton.h  unoTablesModel.cpp  unoTablesModel.h  uno_main_window.ui  uno_search_form.ui  unomainwindow.cpp  unoresource.qrc
app/: .qmake.cache  CMakeLists.txt  app.pro  main.cpp  unoMainWindow.cpp  unoMainWindow.h
debian/: changelog  control  install_manifest.txt  qtuno-1.0.0-Linux.deb  qtuno_ooo-1.0.0-Linux.deb  rules
examples/: hello.odt  hello_1.odt
src/: CMakeLists.txt  code_generator.pri  src.pri  src.pro  unoCellEditor.cpp  unoCellEditor.h  unoFileObject.cpp  unoFileObject.h  unoFileWidget.cpp  unoFileWidget.h  unoMdiSubWindowCloseFilter.cpp  unoMdiSubWindowCloseFilter.h  unoSearchResultsForm.cpp  unoSearchResultsForm.h  unoSearchResultsModel.cpp  unoSearchResultsModel.h  unoSearchTablesModel.cpp  unoSingleton.cpp  unoSingleton.h  unoTableCellForm.cpp  unoTableCellForm.h  unoTablesModel.cpp  unoTablesModel.h  uno_cell_editor.ui  uno_search_results_form.ui  uno_table_cell_form.ui  unoresource.qrc
uno/: unoQtReferences.h
